# osint-cli-tool-skeleton

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  INSTALL.md  Makefile  README.md  prepare.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: publish-package.yml  test.yml
examples/: osint.example.toml
osint-cli-tool-skeleton/: __init__.py  __main__.py  cli.py
osint_cli_tool_skeleton/: __init__.py  __main__.py  cli.py  config.py  core.py  engine.py  executor.py  mcp_server.py  plugin.py  report.py  scaffold.py  schema.py  server.py
osint_cli_tool_skeleton/plugins/: __init__.py  http_title.py  string_info.py
skeleton/: __init__.py  __main__.py
tests/: test_config.py  test_engine.py  test_report.py  test_scaffold.py  test_schema.py
